import sequelize from "../config/database.js";
import { DataTypes } from "sequelize";




const Matchs = sequelize.define("match",{
    id:{
        type:DataTypes.INTEGER,
        primaryKey:true,
        autoIncrement:true
    },
    equipeDomicile:{
        type:DataTypes.STRING,
        allowNull:false,
    },
    equipeExterieur:{
        type:DataTypes.STRING,
        allowNull:false,
    },
    stade:{
        type:DataTypes.STRING,
        allowNull:false
    },
    villeHote:{
        type:DataTypes.STRING,
        allowNull:false,
    },
    dateMatch:{
        type:DataTypes.DATE,
        allowNull:false,
    },
    phase:{
        type:DataTypes.ENUM(
            "Groupes",
             "8e",
              "4e",
              " demi",
               " finale"
        )
    }

},
  {
    timestamps: true}

)
export default Matchs;